working scoring.html page

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-blue-100">Join our community of passionate players
             and discover the exciting world of Ping Pong</p>
           <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
-            <a href="https://hsepingpong.com"
+            <a href="/scoring.html"
               class="primary-button w-full sm:w-auto text-center bg-white text-blue-600 px-6 sm:px-8 py-3 rounded-full font-semibold transition-all duration-300 ease-in-out hover:bg-blue-50 hover:scale-150 hover:shadow-lg">Leaderboard</a>
             <a href="/calendar.html"
               class="secondary-button w-full sm:w-auto text-center border-2 border-white text-white px-6 sm:px-8 py-3 rounded-full font-semibold transition-all duration-300 ease-in-out hover:bg-white/10 hover:scale-105 hover:shadow-lg">View
