Change from Members to Staff

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
       <div class="text-center mb-12 sm:mb-16">
         <span class="inline-block bg-blue-600 text-white px-3 py-1 rounded-full text-xs font-medium mb-4">Our
           Leadership</span>
-        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Meet Our Members</h2>
+        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">Meet Our Staff</h2>
         <p class="text-lg sm:text-xl text-gray-600 max-w-2xl mx-auto">Dedicated individuals committed to your table
           tennis journey</p>
       </div>
@@ -217,7 +217,7 @@
       </div>
       <div class="text-center mt-8">
         <p class="text-lg sm:text-xl text-gray-600">
-          A special thanks to <a href="https://www.instagram.com/benodumb/" target="_blank"><span class="text-blue-700 font-medium blue-text-shadow">Ben Odom</span></a> for taking <span>full</span> control of our Social Media Campaign!
+          A special thanks to <a href="https://www.instagram.com/benodumb/" target="_blank"><span class="text-blue-700 font-medium blue-text-shadow ben-odom">Ben Odom</span></a> for taking <span>full</span> control of our Social Media Campaign!
         </p>        
       </div>
     </div>
