new changes to title

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Club Calendar</title>
+    <title>HSE Ping Pong Club</title>
     <!-- Include Tailwind CSS from CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
