--- a/public/scoring.html
+++ b/public/scoring.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Fonts -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HSE Ping Pong Tournament</title>
+    <title>HSE Ping Pong Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/scoring.css">
 
